--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -18,8 +18,7 @@ main {
           position: relative;
           .frame {
             img {
-              width: 524px;
-              height: 650px;
+              width: 100%;
               transition: transform 0.3s ease-in-out;
               &:hover {
                 transform: scale(1.1);
@@ -28,7 +27,6 @@ main {
           }
         }
         .information {
-          position: absolute;
           width: 100%;
           display: flex;
           align-items: center;
