--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -21,6 +21,7 @@ main {
               width: 100%;
               transition: transform 0.3s ease-in-out;
               &:hover {
+                cursor: pointer;
                 transform: scale(1.1);
               }
             }
