--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -25,6 +25,7 @@
       border: 1px solid $black;
 
       &:hover {
+        cursor: cell;
         border-radius: 0%;
         font-size: 200%;
       }
