--- a/src/sass/components/_model.scss
+++ b/src/sass/components/_model.scss
@@ -50,7 +50,7 @@ main {
     display: flex;
     justify-content: center;
     width: 100%;
-    height: calc(100vh);
+    height: 100vh;
     overflow: hidden;
     img {
       position: absolute;
