--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -6,17 +6,18 @@ main {
     position: relative;
     width: auto;
     height: 100%;
-    .row {
-      display: flex;
+    .gallery {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-auto-rows: calc(100vh) px;
+      gap: 32px 16px;
       align-items: center;
-      justify-content: space-evenly;
-      height: 100vh;
       .image-container {
-        height: 100%;
         overflow: hidden;
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
         margin-bottom: 10px;
         .thumbnail {
           overflow: hidden;
@@ -37,7 +38,7 @@ main {
           width: 100%;
           display: flex;
           align-items: center;
-          justify-content: space-between;
+          justify-content: space-around;
           text-transform: uppercase;
           .title {
           }
