--- a/src/sass/components/_curtain.scss
+++ b/src/sass/components/_curtain.scss
@@ -1,7 +1,7 @@
 .curtain {
   position: fixed;
-  top: 0;
-  width: 0;
-  height: 100vh;
+  top: $navbar-height;
+  width: 100vw;
+  height: 0;
   background-color: $main;
 }
