--- a/src/sass/components/_model.scss
+++ b/src/sass/components/_model.scss
@@ -5,7 +5,7 @@ main {
     padding: 0 32px;
     position: relative;
     width: auto;
-    height: calc(60vh - 128px);
+    height: calc(60vh - $navbar-height);
     display: grid;
     grid-template-rows: 1fr 28px 1.5fr;
     grid-template-columns: minmax(0, 1fr) minmax(0, max-content) minmax(0, 1fr);
