--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -25,7 +25,7 @@ main {
           margin-bottom: 10px;
           .img-link {
             img {
-              transition: transform 0.3s ease-in-out;
+              transition: transform 0.5s cubic-bezier(0.43, 0.13, 0.23, 0.96);
               width: 100%;
               &:hover {
                 cursor: pointer;
