--- a/src/sass/components/_model.scss
+++ b/src/sass/components/_model.scss
@@ -1,7 +1,11 @@
-main {
+.model-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   .info-container {
     flex-grow: 1;
     margin: 0 auto;
+    margin-bottom: 10px;
     padding: 0 32px;
     position: relative;
     width: auto;
@@ -49,14 +53,9 @@ main {
     position: relative;
     display: flex;
     justify-content: center;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
     img {
       position: absolute;
-      top: -100vh;
       width: 100%;
-      z-index: -100;
     }
   }
 }
