--- a/src/sass/components/_model.scss
+++ b/src/sass/components/_model.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  .info-container {
+  .title-container {
     flex-grow: 1;
     margin: 0 auto;
     margin-bottom: 10px;
@@ -15,7 +15,7 @@
     grid-template-columns: minmax(0, 1fr) minmax(0, max-content) minmax(0, 1fr);
     align-items: top;
     justify-content: space-evenly;
-    .model-info {
+    .model-title {
       padding: 0 10px;
       display: flex;
       align-items: center;
