--- a/src/sass/components/_model.scss
+++ b/src/sass/components/_model.scss
@@ -57,4 +57,65 @@
       width: 100%;
     }
   }
+  .model-info-wrapper {
+    margin: 1rem 0;
+    .model-info-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0 15%;
+      .paragraph-container {
+        display: grid;
+        grid-template-columns: 1fr 1.5fr;
+        .h2-wrapper {
+          padding: 1rem;
+          display: flex;
+          justify-content: left;
+          grid-column: 1;
+          h2 {
+          }
+        }
+        .p-wrapper {
+          padding: 1rem;
+          grid-column: 2;
+          @media (max-width: 768px) {
+            grid-column: 1 / 3;
+          }
+          p {
+            text-align: justify;
+            line-height: 28px;
+            font-weight: 400;
+          }
+        }
+      }
+      .model-details {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        @media (max-width: 768px) {
+          width: 100%;
+        }
+        .info-row {
+          display: grid;
+          grid-template-columns: 1fr 3fr 1fr;
+          justify-content: space-between;
+          align-items: center;
+          margin: 0.5rem 0;
+          padding: 0 10px;
+          font-size: 1.5rem;
+          .info-label {
+            display: flex;
+            justify-content: left;
+            grid-column: 1;
+          }
+          .info-value {
+            grid-column: 3;
+            display: flex;
+            justify-content: right;
+            align-items: center;
+          }
+        }
+      }
+    }
+  }
 }
