--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -7,6 +7,7 @@ main {
     width: auto;
     height: 100%;
     .gallery {
+      margin-top: 104px;
       display: grid;
       grid-template-columns: 1fr 1fr;
       grid-auto-rows: calc(100vh) px;
