--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@
 @import "./base/typography";
 
 @import "./components/home";
+@import "./components/gallery";
 @import "./components/model";
 @import "./components/navbar";
 @import "./components/curtain";
