--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -1,12 +1,12 @@
 .navbar {
   padding: 0 32px;
-  margin: 0 auto 1rem auto;
   position: -webkit-sticky;
   z-index: 200;
   position: sticky;
   top: 0;
   background-color: $main;
   border-bottom: 1px solid $black;
+  margin-bottom: -1px;
   .navbar-container {
     height: $navbar-height;
     display: flex;
