--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -1,4 +1,77 @@
 .home-page {
-  background-color: $main;
-  height: calc(100vh - #{$navbar-height});
+  position: relative;
+  overflow: hidden;
+  background: linear-gradient(90deg, $black 50%, $main 50%);
+  color: $main;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 100vh 100vh;
+
+  @media (max-width: 768px) {
+    overflow-y: visible;
+    grid-template-columns: 100vw;
+    grid-template-rows: 100vh;
+    background: $black;
+  }
+  .hint {
+    position: absolute;
+    top: 0;
+    padding: 10px;
+  }
+  .welcome-wrapper {
+    width: 100%;
+    position: relative;
+    padding: 2rem;
+    grid-column: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    h1 {
+      @media (max-width: 768px) {
+        font-size: 5rem;
+      }
+      font-weight: 400;
+      font-size: 12rem;
+      font-family: "Maragsa";
+    }
+    .welcome-message {
+      display: block;
+      border-radius: 16px;
+      transition: 0.5s ease-in-out;
+      padding: 8px;
+      transition: 0.5s ease-in-out;
+      &:hover {
+        background-color: $black;
+      }
+      p {
+        @media (max-width: 768px) {
+          transition: 0.5s ease-in-out;
+          &:focus {
+            background-color: $black;
+          }
+        }
+        text-align: justify;
+        line-height: 28px;
+        font-weight: 400;
+      }
+    }
+  }
+  .img-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: bottom;
+    grid-column: 2;
+    img {
+      position: absolute;
+      width: 100%;
+      left: 0;
+      z-index: 0;
+
+      @media (max-width: 768px) {
+        width: 225%;
+      }
+    }
+  }
 }
