--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -4,8 +4,8 @@
   z-index: 200;
   position: sticky;
   top: 0;
-  background-color: $main;
-  border-bottom: 1px solid $black;
+  background-color: $black;
+  border-bottom: 1px solid $main;
   margin-bottom: -1px;
   .navbar-container {
     height: $navbar-height;
@@ -16,12 +16,12 @@
     .logo {
       a {
         text-decoration: none;
-        color: $black;
+        color: $main;
         white-space: nowrap;
 
         &:hover {
-          background-color: $black;
-          color: $main;
+          background-color: $main;
+          color: $black;
         }
       }
     }
@@ -32,12 +32,12 @@
       align-items: center;
       justify-content: center;
       border-radius: 100%;
-      border: 1px solid $black;
+      border: 1px solid $main;
 
       &:hover {
         cursor: cell;
-        background-color: $black;
-        color: $main;
+        background-color: $main;
+        color: $black;
       }
     }
   }
