Add border to the footer

--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -235,6 +235,8 @@
     }
   }
   .contact {
+    border: 1px solid $gold;
+    border-top: none;
     z-index: 1;
     background-color: $black;
     width: 100%;
