--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -7,12 +7,15 @@ main {
     width: auto;
     height: 100%;
     .gallery {
-      margin-top: 104px;
+      margin-top: 64px;
       display: grid;
       grid-template-columns: 1fr 1fr;
       grid-auto-rows: calc(100vh) px;
       gap: 32px 16px;
       align-items: center;
+      @media (max-width: 768px) {
+        grid-template-columns: 1fr;
+      }
       .image-container {
         overflow: hidden;
         display: flex;
