--- a/src/sass/components/_model.scss
+++ b/src/sass/components/_model.scss
@@ -3,36 +3,41 @@
   flex-direction: column;
   align-items: center;
   .title-container {
-    flex-grow: 1;
     margin: 0 auto;
-    margin-bottom: 10px;
     padding: 0 32px;
     position: relative;
-    width: auto;
+    width: 100vw;
     height: calc(50vh - #{$navbar-height});
     display: grid;
-    grid-template-rows: 0.5fr 28px 1.5fr;
+    grid-template-areas: "empty instagram empty2" "empty3 title empty4";
+    grid-template-rows: 0.5fr 1fr;
     grid-template-columns: minmax(0, 1fr) minmax(0, max-content) minmax(0, 1fr);
     align-items: top;
     justify-content: space-evenly;
+    @media (max-width: 768px) {
+      padding: 0 1rem;
+      grid-template-areas: "empty instagram empty2" "title title title";
+      height: calc(30vh - #{$navbar-height});
+    }
     .title-info-container {
-      padding: 0 10px;
       display: flex;
-      align-items: center;
-      justify-content: space-between;
-      grid-column: 2;
-      grid-row: 2;
+      width: 100%;
+      align-items: flex-end;
+      justify-content: left;
+      grid-area: instagram;
       .location {
         :nth-child(2) {
           margin-left: 28px;
         }
       }
       .instagram {
+        @media (max-width: 768px) {
+          display: none;
+        }
       }
     }
     .name-container {
-      grid-row: 3;
-      grid-column: 2;
+      grid-area: title;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -43,9 +48,10 @@
       span {
         display: inline-block;
         position: relative;
-        font-weight: 400;
-        font-size: 10vw;
-        font-family: "Maragsa";
+        text-shadow: -4px 0 $gold, 0 1px $gold, 1px 0 $gold, 0 -1px $gold;
+        @media (max-width: 768px) {
+          text-shadow: -2px 0 $gold, 0 1px $gold, 1px 0 $gold, 0 -1px $gold;
+        }
       }
     }
   }
@@ -64,23 +70,28 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin: 0 15%;
+      margin: 0 15vw;
+      @media (max-width: 768px) {
+        margin: 0 1.5rem;
+      }
       .paragraph-container {
         display: grid;
-        grid-template-columns: 1fr 1.5fr;
+        grid-template-columns: 1fr 1fr 1fr;
         .h2-wrapper {
           padding: 1rem;
+          width: 100%;
+          grid-column: 1 / -1;
           display: flex;
           justify-content: left;
-          grid-column: 1;
           h2 {
           }
         }
         .p-wrapper {
           padding: 1rem;
-          grid-column: 2;
+          grid-column: 1 / -1;
           @media (max-width: 768px) {
-            grid-column: 1 / 3;
+            width: 100%;
+            grid-column: 1 / -1;
           }
           p {
             text-align: justify;
@@ -98,16 +109,20 @@
         }
         .info-row {
           display: grid;
-          grid-template-columns: 1fr 4fr;
+          grid-template-columns: 1fr 1fr 1fr;
           justify-content: space-between;
           align-items: center;
           margin: 0.5rem 0;
           padding: 0 10px;
-          font-size: 1.5rem;
           .info-label {
             display: flex;
             justify-content: left;
             grid-column: 1;
+          }
+          .golden-line {
+            grid-column: 2;
+            height: 2px;
+            background-color: $gold;
           }
           .info-value {
             grid-column: 3;
