Minor style changes

--- a/src/sass/components/_model.scss
+++ b/src/sass/components/_model.scss
@@ -43,7 +43,7 @@
       justify-content: center;
       overflow: hidden;
       .first-name {
-        margin-right: 72px;
+        margin-right: 2rem;
       }
       span {
         display: inline-block;
