--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -33,12 +33,8 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      border-radius: 100%;
-      border: 1px solid $gold;
       &:hover {
-        cursor: cell;
-        background-color: $gold;
-        color: $black;
+        cursor: pointer;
       }
     }
   }
