--- a/src/sass/components/_model.scss
+++ b/src/sass/components/_model.scss
@@ -2,6 +2,50 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  .lightbox-wrapper {
+    position: relative;
+    .lightbox {
+      .close-button {
+        position: absolute;
+        top: 1rem;
+        left: 1rem;
+        width: 48px;
+        height: 48px;
+        display: flex;
+        align-items: center;
+        :first-child {
+          background-color: $main;
+          transform: rotate(45deg);
+        }
+        :last-child {
+          background-color: $main;
+          transform: rotate(-45deg);
+        }
+        span {
+          border-radius: 100vw;
+          position: absolute;
+          width: 48px;
+          height: 5px;
+        }
+      }
+      border: 1px solid $gold;
+      padding: 1.5rem;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 10000000;
+      width: 100vw;
+      height: 100vh;
+      background-color: rgba(1, 1, 1, 0.85);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img {
+        max-height: 100%;
+        max-width: 100vw;
+      }
+    }
+  }
   .title-container {
     margin: 0 auto;
     padding: 0 32px;
@@ -59,6 +103,9 @@
     position: relative;
     display: flex;
     justify-content: center;
+    :hover {
+      cursor: pointer;
+    }
     img {
       position: absolute;
       width: 100%;
