--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -29,12 +29,31 @@
     .navbar-menu {
       color: $gold;
       height: 5rem;
-      width: 5rem;
+      width: 9rem;
       display: flex;
       align-items: center;
-      justify-content: center;
-      &:hover {
-        cursor: pointer;
+      justify-content: right;
+      .svg-arrow-wrapper {
+        border-radius: 50%;
+        border: 1px solid $gold;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &:hover {
+          cursor: pointer;
+          background-color: $gold;
+          .svg-arrow {
+            stroke: $gold;
+            fill: $black;
+          }
+        }
+        .svg-arrow {
+          transform: rotate(90deg);
+          stroke: $black;
+          fill: $gold;
+        }
       }
     }
   }
