Change css class name

--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -191,7 +191,7 @@
       grid-template-rows: 1fr 6fr;
     }
   }
-  .contact {
+  .footer {
     z-index: 1;
     background-color: $black;
     width: 100%;
