Style contact page

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,3 +10,4 @@
 @import "./components/navbar";
 @import "./components/curtain";
 @import "./components/hamburger";
+@import "./components/contact";
