--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -31,10 +31,10 @@ a {
   .welcome-wrapper {
     h1 {
       font-weight: 400;
-      font-size: 20rem;
+      font-size: 15rem;
       font-family: "Maragsa";
       @media (max-width: 768px) {
-        font-size: 5rem;
+        font-size: 4.8rem;
       }
     }
   }
@@ -69,7 +69,7 @@ a {
       }
     }
   }
-  .contact {
+  .footer {
     font-size: 1rem;
   }
 }
@@ -117,6 +117,23 @@ a {
     }
     .menu-button {
       font-size: 1rem;
+    }
+  }
+}
+.contact-page {
+  .contact-title {
+    h2 {
+      font-weight: 200;
+      font-size: 3rem;
+      font-family: "Maragsa";
+      letter-spacing: 0.5rem;
+      @media (max-width: 768px) {
+        font-size: 2.5rem;
+      }
+    }
+    p {
+      font-size: 1rem;
+      letter-spacing: 0.5px;
     }
   }
 }
