--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -16,6 +16,8 @@
     align-items: center;
     flex-direction: column;
     h2 {
+      text-shadow: -3px 0 $gold, 0 1px $gold, 1px 0 $gold, 0 -1px $gold;
+
       margin-bottom: 1rem;
     }
     p {
