--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -148,6 +148,7 @@
       grid-area: section-right;
       @media (max-width: 768px) {
         border: none;
+        border-radius: 0;
       }
     }
     .sub-title {
