Final commit ver. 1.0.0

--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -16,21 +16,22 @@
     align-items: center;
     flex-direction: column;
     h2 {
+      font-size: 5rem;
       text-shadow: -3px 0 $gold, 0 1px $gold, 1px 0 $gold, 0 -1px $gold;
 
       margin-bottom: 1rem;
     }
     p {
+      visibility: hidden;
     }
   }
   .contact-info-container {
     border-radius: 2rem;
     padding: 1rem 3rem;
-    border: 1px solid $gold;
-    box-shadow: 0.5rem 0.5rem 0.5rem 1px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 0 2px 2px rgba($gold, 0.1);
     grid-area: info;
     display: grid;
-    grid-template-areas: "title" "sub-title" "infos" "links";
+    grid-template-areas: "title" "infos" "infos" "links";
     grid-template-columns: 1fr;
     grid-template-rows: 0.5fr 0.5fr 3fr 0.5fr;
     width: 100%;
@@ -40,13 +41,6 @@
       align-items: flex-end;
       font-size: 2rem;
       grid-area: title;
-    }
-    .contact-info-subtitle {
-      display: flex;
-      justify-content: left;
-      padding-top: 0.5rem;
-      font-size: 1rem;
-      grid-area: sub-title;
     }
     .contact-details {
       grid-area: infos;
@@ -99,10 +93,9 @@
   .contact-form {
     margin-left: 1rem;
     background-color: darken($black, 0%);
-    border: 1px solid $gold;
     border-radius: 2rem;
-    box-shadow: 0.5rem 0.5rem 0.5rem 1px rgba(0, 0, 0, 0.8);
     padding: 1rem 2rem;
+    padding-bottom: 0;
     grid-area: form;
     width: 100%;
     display: grid;
@@ -197,7 +190,7 @@
         resize: none;
         border: none;
         transition: 0.2s ease-in-out;
-        outline: 1px solid $black;
+        outline: 1px solid gray;
         padding: 0.5rem;
         &:focus {
           outline: 1px solid $gold;
