--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -41,6 +41,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-right: 1rem;
         &:hover {
           cursor: pointer;
           background-color: $gold;
