--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,3 +5,9 @@ $gold: #bd9855;
 $darkgold: darken($gold, 10%);
 
 $navbar-height: 7rem;
+
+//breakpoints
+$phone: 576px;
+$tablet: 768px;
+$laptop: 992px;
+$desktop: 1200px;
