--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -36,8 +36,11 @@
       .svg-arrow-wrapper {
         border-radius: 50%;
         border: 1px solid $gold;
-        width: 50px;
-        height: 50px;
+        @media (max-width: $tablet) {
+          border: none;
+        }
+        width: 3rem;
+        height: 3rem;
         display: flex;
         justify-content: center;
         align-items: center;
