--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -32,7 +32,7 @@
       width: 9rem;
       display: flex;
       align-items: center;
-      justify-content: right;
+      justify-content: flex-end;
       .svg-arrow-wrapper {
         border-radius: 50%;
         border: 1px solid $gold;
