--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -1,5 +1,6 @@
 .contact-page {
-  padding: 5% 10%;
+  padding: 0 10%;
+  padding-top: $navbar-height;
   width: 100vw;
   min-height: 100vh;
   display: grid;
@@ -16,7 +17,7 @@
     align-items: center;
     flex-direction: column;
     h2 {
-      font-size: 5rem;
+      font-size: 8vw;
       text-shadow: -3px 0 $gold, 0 1px $gold, 1px 0 $gold, 0 -1px $gold;
 
       margin-bottom: 1rem;
@@ -37,7 +38,7 @@
     width: 100%;
     .contact-info-title {
       display: flex;
-      justify-content: left;
+      justify-content: flex-start;
       align-items: flex-end;
       font-size: 2rem;
       grid-area: title;
@@ -48,7 +49,7 @@
       flex-direction: column;
       .info-row {
         display: flex;
-        justify-content: left;
+        justify-content: flex-start;
         width: 100%;
         height: 100%;
         .info-icon {
@@ -73,6 +74,9 @@
       height: 100%;
       justify-content: space-between;
       align-items: center;
+      @media (max-width: $tablet) {
+        width: 100%;
+      }
 
       .contact-link {
         font-size: 1.5rem;
@@ -113,19 +117,50 @@
       margin-top: 1rem;
       margin-left: 0;
     }
+    @media (max-width: $phone) {
+      grid-template-areas:
+        "first first"
+        "last last"
+        "email email"
+        "phone phone"
+        "contact-preference contact-preference"
+        "message message"
+        ". button";
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr 1fr 1fr 3fr 1fr;
+    }
 
     .input-label {
       font-size: 1rem;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      width: 100%;
+      &.first-name {
+        grid-area: first;
+      }
+      &.last-name {
+        grid-area: last;
+      }
+      &.email {
+        grid-area: email;
+      }
+      &.phone {
+        grid-area: phone;
+      }
       &.preference {
         font-size: 1rem;
+      }
+      @media (max-width: $phone) {
+        grid-column: 1 / 2;
       }
     }
     .custom-input {
       height: 100%;
       width: 90%;
+      @media (max-width: $phone) {
+        width: 100%;
+      }
       font-size: 1rem;
       color: $gold;
       &::placeholder {
@@ -152,6 +187,9 @@
         display: flex;
         .contact-preference-option {
           width: 90%;
+          @media (max-width: $phone) {
+            width: 100%;
+          }
           &.email {
             grid-column: 1 / 2;
           }
@@ -162,10 +200,10 @@
             width: 90%;
             font-size: 1.1rem;
             display: flex;
-            justify-content: left;
+            justify-content: flex-start;
             align-items: center;
             .radio-input {
-              margin-right: 20px;
+              margin-right: 1.25rem;
             }
           }
         }
@@ -213,7 +251,7 @@
     }
     .form-button-wrapper {
       display: flex;
-      justify-content: right;
+      justify-content: flex-end;
       grid-area: button;
       grid-column: 2 / 3;
       width: 100%;
