--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -69,6 +69,12 @@
     display: flex;
     justify-content: flex-start;
     @media (max-width: $tablet) {
+      width: 40%;
+      justify-content: space-between;
+    }
+    @media (max-width: $phone) {
+      width: calc(100% - 10rem);
+      justify-content: space-between;
       span {
         font-size: 1.5rem;
       }
