--- a/src/sass/components/_model.scss
+++ b/src/sass/components/_model.scss
@@ -67,7 +67,7 @@
       display: flex;
       width: 100%;
       align-items: flex-end;
-      justify-content: left;
+      justify-content: flex-start;
       grid-area: instagram;
       .location {
         :nth-child(2) {
@@ -129,9 +129,7 @@
           width: 100%;
           grid-column: 1 / -1;
           display: flex;
-          justify-content: left;
-          h2 {
-          }
+          justify-content: flex-start;
         }
         .p-wrapper {
           padding: 1rem;
